results/SVCOMP/specgen/log-BufferedReaderReadLine-2024_02_24_15_52_14.txt
import java.io.BufferedReader;
import java.io.StringReader;

public class BufferedReaderReadLine {

  //@ requires br != null;
  //@ ensures \result != null;
  public static String check(BufferedReader br) throws Exception {
    String s = br.readLine();
    return s;
  }

  //@ requires arg != null;
  //@ ensures \result == null || \result > 0;
  public static void main(String arg) {
    String thisLine = null;
    int numLines = 0;

    try {
      BufferedReader br = new BufferedReader(new StringReader(arg));
      String line = check(br);
      //@ maintaining numLines >= 0;
      //@ decreases numLines;
      while ((thisLine = check(br)) != null) {
        System.out.println(thisLine);
        numLines += 1;
      }
    } catch (Exception e) {
      e.printStackTrace();
      return;
    }
    assert numLines > 0;
  }
}
/home/max/Documents/JMLGPT/tmp/BufferedReaderReadLine.java:14: error: A \result expression may not be used in the specification of a method that returns void
  //@ ensures \result == null || \result > 0;
               ^
/home/max/Documents/JMLGPT/tmp/BufferedReaderReadLine.java:14: error: A \result expression may not be used in the specification of a method that returns void
  //@ ensures \result == null || \result > 0;
                                  ^
2 errors

import java.io.BufferedReader;
import java.io.StringReader;

public class BufferedReaderReadLine {

  //@ requires br != null;
  //@ ensures \result != null;
  public static String check(BufferedReader br) throws Exception {
    String s = br.readLine();
    return s;
  }

  //@ requires arg != null;
  //@ ensures \result >= 0;
  public static void main(String arg) {
    String thisLine = null;
    int numLines = 0;

    try {
      BufferedReader br = new BufferedReader(new StringReader(arg));
      String line = check(br);
      //@ maintaining numLines >= 0;
      //@ decreases numLines;
      while ((thisLine = check(br)) != null) {
        System.out.println(thisLine);
        numLines += 1;
      }
    } catch (Exception e) {
      e.printStackTrace();
      return;
    }
    assert numLines > 0;
  }
}
/home/max/Documents/JMLGPT/tmp/BufferedReaderReadLine.java:14: error: A \result expression may not be used in the specification of a method that returns void
  //@ ensures \result >= 0;
               ^
1 error

import java.io.BufferedReader;
import java.io.StringReader;

public class BufferedReaderReadLine {

  //@ requires br != null;
  //@ ensures \result != null;
  public static String check(BufferedReader br) throws Exception {
    String s = br.readLine();
    return s;
  }

  //@ requires arg != null;
  public static void main(String arg) {
    String thisLine = null;
    int numLines = 0;

    try {
      BufferedReader br = new BufferedReader(new StringReader(arg));
      String line = check(br);
      //@ maintaining numLines >= 0;
      //@ decreases numLines;
      while ((thisLine = check(br)) != null) {
        System.out.println(thisLine);
        numLines += 1;
      }
    } catch (Exception e) {
      e.printStackTrace();
      return;
    }
    assert numLines > 0;
  }
}
